# HO-CXX

./: .gitignore  CMakeLists.txt  README.md  test_solver.py
Backup_InProgress_Stuff/: VTM_Poisson_BC_Approach.f90
CPP/: CMakeLists.txt  HO_CPP_2D_Mohammad.vcxproj  HO_CPP_2D_Mohammad.vcxproj.filters  HO_cpp_2D.cpp  calculation.h  main.cpp  misc.hpp  preprocess.cpp  preprocess.h
Test_Package/: Makefile  Makefile.cps  VTM.f90  aplles_control.xml  compare.py  config.amgcl  ignore_aplles_interface_fortran.F90
Test_Package/include/: aplles_interface.h
Test_Package/include/parallel/: _partitioner.h  _scan.h  allocator.h  mempool.h  numa.h  parallel.h  partition.h  partitioned_objects.h  random.h  scoped_lock.h
Test_Package/include/precon/: amg.h  base_precon.h  color.h  identity.h  krylov.h  point_relax.h  precons.h  relaxation.h
Test_Package/include/solver/: base_solver.h  bicgstab.h  gmres.h  pcg.h  solvers.h
Test_Package/include/splib/: attributes.h  base_matrix.h  coo_matrix.h  copy.h  csr_matrix.h  dia_matrix.h  (+10 more)
cxx/: Makefile  amgcl.hpp  aplles.hpp  array.hpp  basis.hpp  eigen.hpp  forall.hpp  geometry.hpp  geometry_impl.cpp  hypre.hpp  laplacian.cpp  laplacian.hpp  linsolver.hpp  macros.h  memory.h  wtimer.hpp
cxx/linsolvers/: amgcl.hpp  aplles.hpp  eigen.hpp  hypre.hpp  linsolver.cpp  linsolver.hpp
fortran/: compare.py  ignore_aplles_interface.cxx
input/: mesh_BFS_linux.msh  mesh_cavity.msh  mesh_cylinder.msh
old/: README.md
old/cxx/: geometry.hpp  laplacian.cpp  laplacian.hpp  memory.hpp  my_IncompleteLUT.h  test_forall.cpp  wtimer.hpp
old/fortran/: Makefile  VTM.f90
old/python/: Makefile.hypre  Makefile.magma  amgx_driver.cpp  bilum.py  color.py  config_amgx.json  hypre_driver.cpp  indset_impl.cpp  itsol.py  itsol_impl.cpp  mkl_sparse_impl.cpp  my_vcycle.py  prep_mkl.sh  run_hypre.sh  sp_solver_impl.cpp  test_solver.py
python/: Makefile  Makefile.amgx  bilum.py  cblock_sgs.cpp  cblock_sgs.py  hypre_driver.cpp  indset.py  itsol.py  itsol_impl.cpp  magma_driver.cpp  my_vcycle.py  run_magma.sh  sp_dgetrs.cpp  sp_solver.py  sp_solver_impl.cpp  test_solver.py
python/readers/: Step_Expansion.su2  read_su2.py
src/: HO_2D.cpp  HO_2D.hpp  HO_CPP_2D_Mohammad.sln  HO_cpp_2D.cpp  MathHelpers.hpp  MemoryHelper.hpp  Mesh.cpp  Mesh.hpp  calculation.h  main.cpp  misc.hpp  note.txt  preprocess.cpp  preprocess.h
wip/: VTM3D.f90
(+14 files in other folders)
